--- a/main.tex
+++ b/main.tex
@@ -210,234 +210,6 @@ In this section, we analyze SVGD in discrete time, in the infinite number of par
 \end{proposition}
 %  We provide here a sketch of the proof and the main ideas, the reader may refer to the \Cref{sec:proof_descent}  %\Cref{sec:proof_descent} 
 %  for the complete proof.
-\begin{proof}
-    %	Let $\cF:\cP_2(\X)\to \R$ defined by $\cF(\mu)=KL(\mu|\pi)$.
-    Our goal is to prove a discrete dissipation of the form $(\KL(\mu_{n+1}|\pi)-\KL(\mu_{n}|\pi))/\gamma \leq -I_{stein}(\mu_n|\pi) + \text{error term}$. 
-    %\begin{equation}
-        %$\frac{KL(\mu_{n+1}|\pi)-KL(\mu_{n}|\pi)}{\gamma} \leq -I_{stein}(\mu_n|\pi) + \text{error term}$. 
-   % \end{equation}    
-    Our assumptions will control the error term. 
-    Fix $n \ge 0$ and denote $g = P_{\mu_n}\nabla \log(\frac{\mu_n}{\pi})$, $\phi_t = I - t g$ for $t \in [0,\gamma]$ and $\rho_t = (\phi_t)_{\#}\mu_n$. Note that $\rho_0 = \mu_n$ and $\rho_{\gamma} = \mu_{n+1}$. 
-    
-    Under our assumptions, one can show that for any $x \in \X$, $\|g(x)\|^2\le B^2 I_{Stein}(\mu_n|\pi)$ and $\|Jg(x)\|_{HS}^2 \le B^2 I_{Stein}(\mu_n|\pi)$, using the reproducing property and Cauchy-Schwartz in $\cH$. Hence, $\|t Jg(x)\|_{op} < 1$ and $\phi_t$ is a diffeomorphism for every $t \in [0,\gamma]$. Moreover, $\|(J \phi_t)^{-1}(x)\|_{op} \leq \alpha$. Using~\cite[Theorem 5.34]{villani2003topics}, the velocity field ruling the time evolution of $\rho_t$ is $w_t \in L^2(\rho_t)$ defined by $w_t(x) = -g(\phi_t^{-1}(x))$. %Note that $w_0 = -g\in \cH$.    
-    
-    Denote $\varphi(t) = \KL(\rho_t|\pi)$. Using a Taylor expansion,
-        $\varphi(\gamma) = \varphi(0) + \gamma \varphi'(0) + \int_{0}^{\gamma} (\gamma - t)\varphi''(t)dt$.
-        We now identify each term. First, 
-        \begin{equation*}
-    \varphi(0) = \KL(\mu_n|\pi)\; \text{ and } \;\varphi(\gamma) = \KL(\mu_{n+1}|\pi).
-        \end{equation*} 
-        Then, using the chain rule~\cite[Section 8.2]{villani2003topics}, 
-        \begin{equation*}
-            \varphi'(t)=\ps{\nabla_{W_2} \KL(\rho_t|\pi),w_t}_{L^2(\rho_t)}\; \text{ and } \;\varphi''(t) = \ps{w_t,Hess_{\KL(.|\pi)}(\rho_t)w_t}_{L^2(\rho_t)}.
-        \end{equation*}
-        Therefore, $\varphi'(0) = -\ps{\nabla \log\left(\frac{\mu_n}{\pi}\right),g}_{L^2(\mu_n)}%=-\ps{g,g}_{\cH}
-        =-I_{Stein}(\mu_n|\pi)$. %, using $g \in \cH$. 
-        Moreover, $\varphi''(t) = \psi_1(t) + \psi_2(t)$, where
-        \begin{equation*}
-        \psi_1(t) = \E_{x \sim \rho_t} \left[ \ps{w_t(x), H_V(x) w_t(x)}\right] \; \text{ and } \; \psi_2(t) = \E_{x \sim \rho_t} \left[ \|J w_t(x)\|_{HS}^2 \right].
-        \end{equation*}
-    The first term $\psi_1(t)$ is bounded using~\Cref{ass:V_Lipschitz}, $\psi_1(t) \leq M \|g\|_{L^2(\mu_n)}^2 \leq M B^2 I_{Stein}(\mu_n|\pi)$. The second term $\psi_2(t)$ is the most challenging to bound as $\|J w\|_{HS}$ cannot be controlled by $\|w\|$ for a general $w$. However, in our case, $w_t = -g \circ (\phi_t)^{-1}$, and $-J w_t \circ \phi_t = Jg (J \phi_t)^{-1}$. Therefore, $\|J w_t\circ \phi_t(x)\|_{HS}^2 \leq \|Jg(x)\|_{HS}^2 \|(J \phi_t)^{-1}(x)\|_{op}^2 \leq \alpha^2 B^2 I_{Stein}(\mu_n|\pi)$.
-    %The second term , the first term is easily bounded by
-    % $\ps{v,H_V v} \leq M \|v\|^2$. Then since $\rho_t = \phi_{t\#} \mu_n$ and $v_t = -g(\phi_t^{-1})$, by the transfer lemma $\mathbb{E}_{x \sim \rho_t}[\| v_t(x)\|^2]=\mathbb{E}_{x\sim \mu_n}[\|g(x)\|^2]\le B^2I_{Stein}(\mu_n|\pi)$, hence 
-    %$
-    %\E_{x\sim \rho_t}[ \ps{v_t(x), H_V(x) v_t(x)}]\le M B^2 I_{Stein}(\mu_n|\pi)$.
-    %  The second term is the most challenging to bound.  
-    %  By the chain rule 
-    %  %for any $x$ we have $-J v_t(x)=Jg(\phi_t^{-1}(x))(J\phi_t)^{-1}(\phi_t^{-1}(x))$; hence by 
-    %  and the transfer lemma, we first have
-    %   $\E_{x \sim \rho_t} \left[\|J v_t(x)\|_{HS}^2\right]= \E_{x \sim \mu_n} \left[\|Jg(x) (J\phi_t)^{-1}(x)\|_{HS}^2\right]$. Then,  for any $x$, $ \|Jg(x) (J\phi_t)^{-1}(x)\|_{HS}^2 \le B^2I_{Stein}(\mu_n|\pi) \| (J\phi_t)^{-1}(x)\|_{op}^2$. On the other hand, $J\phi_t=I-tJg$, and if $t<\frac{1}{B\sqrt{C}}$ then $t\|Jg(x)\|<1$ and it can be shown that $\|(I - t Jg(x))^{-1}\| \le \alpha$ for $\gamma$ chosen as in \Cref{prop:descent}. Therefore $\|Jg(x) (J\phi_t)^{-1}(x)\|_{HS}^2\le \alpha^2 B^2 I_{Stein}(\mu_n|\pi)$ and $\varphi''(t)\le (\alpha^2+M)B^2I_{Stein}(\mu_n|\pi)$. 
-    Combining each of the quantity in the Taylor expansion gives the desired result.
-        %Sufficiently, we shall bound the term $\|Jg)(x) J(\phi_t)^{-1}(x)\|_{HS}^2$. 
-    \end{proof}
-Although the Hessian of $\KL(.|\pi)$ is not bounded over the whole tangent space, our proof relies on controlling the Hessian when restricted to $\cH$. 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\subsection{Proof of \Cref{prop:descent}}\label{sec:proof_descent}
-
-%We justify each step of the sketch of the proof of \Cref{sec:descent_lemma_Rd}. For notation purposes we will omit the injection $\iota$ when taking the $L^2$ scalar product with an element of $\cH$.
-
-Let $g^{\prime}\in \cH$, $C = \left\|g^{\prime}\right\|_{\cH}^2$ and denote $g = \iota g^{\prime} \in L^2$,  for every $t \in [0,\gamma], \gamma\leq \frac{\alpha-1}{\alpha B C^{\frac{1}{2}}}$,  $\phi_t = (I - t  g)$. Denote $\rho_t = \phi_{t\#} \mu_n$. Then, $\rho_0 = \mu_n$ and $\rho_{\gamma} = \mu_{n+1}$. 
-%Consider $n \geq 0$ fixed and $\gamma \leq \frac{\alpha-1}{\alpha BC^{\frac{1}{2}} }$. Denote $g = P_{\mu_n}\nabla \log\left(\frac{\mu_n}{\pi}\right)$ and 
-
-
-
-\begin{lemma}\label{lem:inequalities}
-	Suppose \Cref{ass:k_bounded} holds, i.e. the kernel and its gradient are bounded by some positive constant $B$. Then for any $x\in \X$:
-	\begin{align}
-&	\|g(x)\| \leq B C^{\frac{1}{2}}\\
-&	\Vert J g(x)\Vert_{HS}\leq B C^{\frac{1}{2}} 
-	\end{align}
-	
-\end{lemma}
-\begin{proof}
-	This is a consequence of the reproducing property and Cauchy-Schwarz inequality in the RKHS space. We know for any $x\in \X$, $g(x)=g'(x)$ and:
-	\begin{equation*}
-	\|g(x)\|^2=\sum_{i=1}^d \ps{k(x,.),g'_i}^2_{\cH_0}\le \|k(x,.)\|_{\cH_0}^2 \|g'\|_{\cH}^2\le B^2 C.
-	\end{equation*}
-	Similarly:
-	\begin{align*}
-	\|Jg(x)\|_{HS}^2&=\sum_{i,j=1}^d \left|\frac{\partial g_i(x)}{\partial x_j} \right|^2=\sum_{i,j=1}^d \ps{\partial_{x_j}k(x,.), g'_i}_{\cH_0}\le \sum_{i,j=1}^d \| \partial_{x_j}k(x,.)\|^2_{\cH_0} \|g'_i\|_{\cH_0}^2\\
-	&=\| \nabla k(x,.)\|^2_{\cH}\|g'\|^2_{\cH}\le B^2 C.
-	\end{align*}
-\end{proof}
-
-
-
-
-\begin{lemma}\label{lem:diffeo}
-	Suppose that~\Cref{ass:k_bounded} hold. Then, for any $x\in \X$, $\|t Jg(x)\|_{op} \leq t B\sqrt{C}$ and for every $t < \frac{1}{B\sqrt{C}}$, $\phi_t$ is a diffeomorphism. Moreover, $\|(J\phi_t(x))^{-1}\|_{op} \leq \alpha$. 
-	%$\phi_t = I-t\gamma P_{\mu_n}\nabla \log(\frac{\mu}{\pi})(x)$ for $t\in [0,1]$. Fix $\alpha >1$,  Then for $\gamma< \frac{\alpha-1}{\alpha BC^{\frac{1}{2}}} $, $\phi_t$ is a diffeomorphism.
-\end{lemma}
-\begin{proof}
-	First, by \Cref{lem:inequalities}  we have $\|J g(x)\|_{op} \leq \|J g(x)\|_{HS} \leq B\sqrt{C}$.
-	If $t < \frac{1}{B\sqrt{C}}$, then $\|t Jg(x)\|_{op} < 1$. Therefore, $J(\phi_t)(x) = I - t Jg(x)$ is regular for every $x$ and $\phi_t$ is a diffeomorphism. Moreover, 
-	\begin{equation}
-		\|(J\phi_t(x))^{-1}\|_{op} \leq \sum_{k=0}^\infty \|t Jg(x)\|_{op}^k \leq \sum_{k=0}^\infty \|t Jg(x)\|_{HS}^k \leq \sum_{k=0}^\infty (t B \sqrt{C})^k \leq \alpha,
-	\end{equation}
-	where we used $\gamma \leq \frac{\alpha-1}{\alpha BC^{\frac{1}{2}} }$.
-\end{proof}
-    %From \Cref{lem:velocity_field}, 
-    % Using~\cite[Theorem 5.34]{villani2003topics}, 
-    % the velocity field of $\rho_t$ is $v_t \in L^2(\rho_t)$ defined by $v_t(x) = -g(\phi_t^{-1}(x))$. In particular, $v_0 = -g$.
-
-Denote $\varphi(t) = \KL(\rho_t|\pi)$. Using Taylor expansion,
-\begin{equation}
-    \label{eq:Taylor-integral-remainder-appendix}
-    \varphi(\gamma) = \varphi(0) + \gamma \varphi'(0) + \int_{0}^{\gamma} (\gamma - t)\varphi''(t)dt.
-\end{equation}
-We now identify each term. First, $\varphi(0) = \KL(\mu_n|\pi)$ and $\varphi(\gamma) = \KL(\mu_{n+1}|\pi)$.
-
-
-To compute $\varphi'(t)$ and $\varphi''(t)$ we have two options. Either we check the assumptions of the optimal transport theorems allowing to apply the chain rule~\cite{villani2003topics,ambrosio2008gradient}, or we do a direct computation. The latter is preferred, although differential calculus over the Wasserstein space is a powerful way to guess the formulas.
-
-\begin{lemma} Denote $w_t(x) = -g(\phi_t^{-1}(x))$. Then,
-	\begin{equation*}
-		\varphi'(0)=\ps{\nabla_{W_2} \KL(\rho_0|\pi), w_0}_{L^2(\mu_n)} = -\langle S_{\mu_n}\nabla \log(\frac{\mu_n}{\pi}),g^{\prime}\rangle_{\cH},
-	\end{equation*}
-	and,
-	\begin{equation*}
-		\varphi''(t) = \ps{ w_t,Hess_{\KL(.|\pi)}(\rho_t) w_t}_{L^2(\rho_t)} = \int \left[\|Jg(x)(J\phi_t(x))^{-1}\|_{HS}^2 + \ps{g(x), H_V (\phi_t(x)) g(x)}\right] \mu_n(x)dx.
-	\end{equation*}
-\end{lemma}
-\begin{proof}
-We know by \Cref{lem:diffeo} that $\phi_t$ is a diffeomorphism, therefore, $\rho_t$ admits a density given by the change of variables formula:
-	\begin{align}
-	\rho_t(x) = \vert J \phi_t(\phi_t^{-1}(x))  \vert^{-1} \mu_n(\phi_{t}^{-1}(x)). 
-	\end{align}
-	Using the transfer lemma with $\rho_t=\phi_{t\#}\mu_n$, $\varphi(t)$ is given by:
-	\begin{align*}
-	\varphi(t) &= \int \log \left( \frac{\rho_t(y)}{\pi(y)}\right) \rho_t(y)dy\\
-	&=  \int \log\left( \frac{\mu_n(x) \vert  J\phi_t(x) \vert^{-1}}{\pi(\phi_t(x))}\right) \mu_n(x)dx.
-	\end{align*}
-	We can now take the time derivative of $\varphi(t)$ which gives:
-	\begin{equation*}
-	\varphi'(t) = - \int tr\left(J\phi_t(x)^{-1} \frac{dJ\phi_t(x)}{dt}\right)\mu_n(x)dx - \int \ps{\nabla \log \pi(\phi_t(x)),\frac{d\phi_t(x)}{dt}} \mu_n(x)dx.  
-	\end{equation*}
-	Hence, we can use the explicit expression of $\phi_t$ to write:
-	\begin{equation*}
-		\varphi'(t) = \int tr(J\phi_t(x)^{-1} Jg(x))\mu_n(x)dx + \int \ps{\nabla \log \pi(\phi_t(x)), g(x)  }\mu_n(x)dx.  
-	\end{equation*}
-	The Jacobian at time $t=0$ is simply equal to the identity since $\phi_0=I$. It follows that $tr(J\phi_0(x)^{-1} Jg(x)) =tr(Jg(x))= div(g)(x)$ by definition of the divergence operator. Using an integration by parts:
-	\begin{align*}
-		\varphi'(0) &= -\int \left[-div( g )(x)- \ps{\nabla \log \pi(x),g(x)}\right]\mu_n(x)dx\\
-	&= -\int\ps{ \nabla \log\left(\frac{\mu_n}{\pi}\right)(x), g(x)}\mu_n(x)dx
-	= -\langle S_{\mu_n}\nabla \log(\frac{\mu_n}{\pi}),g^{\prime}\rangle_{\cH}.
-	\end{align*}
-	Now, we prove the second statement. First, 
-	\begin{align*}
-	\varphi''(t)= \int \left[tr((Jg(x)(J\phi_t(x))^{-1})^2) + \ps{g(x), H_V (\phi_t(x)) g(x)}\right] \mu_n(x)dx. 
-	\end{align*}
-	Since $Jg(x)$ and $J\phi_t(x)$ commutes, $tr((Jg(x)(J\phi_t(x))^{-1})^2) = \|Jg(x)(J\phi_t(x))^{-1}\|_{HS}^2$. Moreover, using the chain rule, 
-	\begin{equation}
-		-J w_t(x) = J (g \circ \phi_t^{-1})(x) = Jg(\phi_t^{-1}(x)) J(\phi_t^{-1})(x) = Jg(\phi_t^{-1}(x)) (J\phi_t)^{-1}(\phi_t^{-1}(x)).
-	\end{equation}
-		Therefore, $\|Jg(x)(J\phi_t(x))^{-1}\|_{HS}^2 = \|J w_t(\phi_t(x))\|_{HS}^2$, which proves the second part of the second statement. Using the transfer lemma,
-		\begin{align*}
-			\varphi''(t)&= \int \left[\|J w_t(y)\|_{HS}^2 +\ps{ w_t(y),H_V (y) w_t(y)}\right] \rho_t(y)dy\\
-			&=\ps{ w_t,Hess_{\KL(.|\pi)}(\rho_t) w_t}_{L^2(\rho_t)},
-			\end{align*}
-			which concludes the proof.
-\end{proof}
-Denote
-\begin{equation*}
-        \psi_1(t) = \int \left[\|Jg(x)(J\phi_t(x))^{-1}\|_{HS}^2\right] \mu_n(x)dx \; \text{ and } \; \psi_2(t) = \int \ps{g(x), H_V (\phi_t(x)) g(x)}\mu_n(x)dx.
-		\end{equation*}
-	Then, $\varphi''(t) = \psi_1(t) + \psi_2(t)$.
-% Second, using the chain rule in the Wasserstein space, 
-% \begin{multline*}
-% \varphi'(0) = \ps{\nabla_{W_2} \KL(\rho_0|\pi),v_0}_{L^2(\rho_0)} = \ps{P_{\rho_0}\nabla_{W_2} \KL(\rho_0|\pi),v_0}_{\cH}
-%  = -\|g\|_{\cH}^2=-I_{Stein}(\mu_n|\pi)
-% \end{multline*}
-%  using $v_0 \in \cH$. 
-% Finally, recall that the Hessian of $\KL(.|\pi)$ at $\mu$ is the operator $H_{\KL(.|\pi)}(\mu) : L^2(\mu) \to L^2(\mu)$ defined by 
-% \begin{equation}
-%     \ps{v, H_{\KL(.|\pi)}(\mu) v}_{\mu} = E_{X \sim \mu} \left[\|J v(X)\|_{HS}^2 + \ps{v(X), H_V(X) v(X)}\right],
-% \end{equation}
-% where $H_V$ is the Hessian matrix of $V = -\log(\pi)$ and $Jv$ the Jacobian matrix of $v \in L^2(\mu)$. Hence,
-% \begin{equation}
-%     \varphi''(t) %= \ps{v(t),H_{\cF}(\mu(t)) v(t)}_{\mu(t)} 
-%     = E_{x_t \sim \rho_t} \left[ \|J v_t(x_t)\|_{HS}^2 + \ps{v_t(x_t), H_V(x_t) v_t(x_t)}\right].
-% \end{equation}
-We bound $\psi_1$ and $\psi_2$ separately. First, since the potential $V$ is $M$-smooth, 
-\begin{align*}
-	\psi_2(t) \leq M\int \|g(x)\|^2 \mu_n(x)dx \leq M B^2 C,
-\end{align*}
-by using \Cref{lem:inequalities}.
-%$\ps{v,H_V v} \leq M \|v\|^2$. Therefore, 
-% \begin{align*}
-%     E_{x_t\sim \rho_t} \left[ \ps{ v_t(x_t), H_V(x_t) v_t(x_t) } \right] &= E_{x_0\sim \rho_0} \left[ \ps{v_t(\phi_t(x_0)), H_V(\phi_t(x_0)) v_t(\phi_t(x_0))}\right] \\
-%     &= E_{x_0\sim \rho_0} \left[\ps{v_0, H_V(\phi_t(x_0)) v_0}\right]\\
-%     &\leq M \|g\|_{L^2(\mu_n)}^2 \le M B^2 I_{Stein}(\mu_n|\pi).
-% \end{align*}
-%by domination of the RKHS norm over the $L^2$ norm.\aknote{add this in background}
-% For the second term, note that by the chain rule :
-% \begin{equation}
-% -J v_t(x) = J (g \circ \phi_t^{-1})(x) = Jg(\phi_t^{-1}(x)) J(\phi_t^{-1})(x) = Jg(\phi_t^{-1}(x)) (J\phi_t)^{-1}(\phi_t^{-1}(x)),
-% \end{equation}
-% therefore $E_{x_t \sim \mu_t} \left(\|J v_t(x_t)\|_{HS}^2\right) = E_{x_0 \sim \rho_0} \left(\|Jg(x_0) J(\phi_t)^{-1}(x_0)\|_{HS}^2\right)$. Sufficiently, we shall bound the term $\|J(g)(x) J(\phi_t)^{-1}(x)\|_{HS}^2$. First,
-Now, we bound $\psi_1(t)$ using \Cref{lem:diffeo} and \ref{lem:inequalities}:
-\begin{equation}
-    \|Jg(x)(J\phi_t(x))^{-1}\|_{HS}^2 \leq \|Jg(x)\|_{HS}^2 \| (J\phi_t(x))^{-1}\|_{op}^2 \leq \alpha^2 B^2 C.
-\end{equation}
-
-
-% Then, $J\phi_t(x) = I - t Jg(x)$ and, since $t < \frac{1}{B\sqrt{C}}$, we have $t\|Jg(x)\| < 1$. Therefore, 
-% \begin{equation}
-% \|(I - t Jg(x))^{-1}\|_{op} \leq \sum_{k=0}^{+\infty} \|t Jg(x)\|_{op}^k = \frac{1}{1-t\|Jg(x)\|_{op}} \leq \frac{1}{1-t\|Jg(x)\|_{HS}} \leq \frac{1}{1-\gamma B\sqrt{C}}.
-% \end{equation}
-% Therefore, 
-% \begin{equation}
-%     \|Jg(x) (J\phi_t)^{-1}(x)\|_{HS}^2 \leq B^2 I_{Stein}(\mu_n|\pi) \frac{1}{(1-\gamma B\sqrt{C})^2}.
-% \end{equation}
-% Hence, if $\alpha > 1$ and $\gamma \leq \frac{\alpha - 1}{\alpha B \sqrt{C}}$, then $\frac{1}{1-\gamma B\sqrt{C}} \leq \alpha$ and 
-% \begin{equation}
-%     \|Jg(x) J(\phi_t)^{-1}(x)\|_{HS}^2 \leq \alpha^2 B^2 I_{Stein}(\mu_n|\pi).
-% \end{equation}
-Finally, $\varphi''(t) \leq (\alpha^2 + M)B^2 C$. Plugging into~\eqref{eq:Taylor-integral-remainder-appendix} gives the result.
-
-
-\begin{lemma}\label{lem:bounded_stein}
-	Suppose \Cref{ass:k_bounded} holds, i.e. the kernel and its gradient are bounded by some positive constant $B$. Moreover,  assume that $\nabla \log(\pi)$ is $M$-Lipschitz  and that $\int \Vert x \Vert \mu_n(x)dx $ is uniformly bounded on $n$.	Then $I_{Stein}(\mu_n|\pi)$ remains bounded by some $C>0$, i.e. \Cref{ass:bounded_I_Stein} holds.%\aknote{this also holds under the stronger \Cref{ass:V_bounded}}
-\end{lemma}
-\begin{proof}
-	For any $\mu$, we have :
-	\begin{equation*}
-	I_{Stein}(\mu|\pi)=\ps{\int \nabla \log \pi(x)k(x,.) + \nabla_1 k(x,.)d\mu(x), \int \nabla \log \pi(y)k(y,.) + \nabla_1 k(y,.)d\mu(y)}_{\cH}
-	\end{equation*}
-	Using the reproducing property and integration by parts it is possible to write $I_{Stein}(\mu|\pi)$ as:
-	\begin{align*}
-	I_{Stein}(\mu|\pi) =& \int \nabla_1.\nabla_2 k(x,y)d\mu(x)d\mu(y)\\ &+ \int \ps{\nabla \log \pi(y),\nabla_1 k(x,y)}d\mu(x)d\mu(y)+\int \ps{\nabla \log \pi(x),\nabla_1 k(y,x)}d\mu(x)d\mu(y)\\ 
-	&+ \int \ps{\nabla \log \pi(x),\nabla \log \pi(y)} k(x,y)d\mu(x)d\mu(y).
-	\end{align*}
-	The terms involving the kernel are easily bounded since the kernel is bounded  with bounded derivatives.
-		Using that $\nabla \log \pi$ is $M$-Lipschitz, it is easy to see that
-		\begin{align}
-		\Vert \nabla \log \pi(x) \Vert \leq \Vert \nabla \log \pi(0) \Vert + M \Vert x\Vert.	
-		\end{align}
-		Using the above inequality, one can directly conclude  that  $\int \Vert x \Vert \mu_n(x)dx $ remains bounded.
-\end{proof}
-
 
 
 
@@ -629,7 +401,7 @@ We now study VR-SVSGD, \textit{i.e.}, the update
 \begin{equation*}
     \mu_{n+1} = (I - \gamma g_n) \# \mu_n,
 \end{equation*}
-where $g_n$ is defined by
+where $g_n$ is defined by...
 
 
 
